# data-stat

./: .gitignore  Cargo.toml  Dockerfile  README.md  analysis.rest  certbot.sh  chart.rest  chart_data.json  cheat_sheet.sh  curls.rest  deploy.sh  deploy_files.sh  generate_csv_files.sh  monitor.yml  prometheus.yml  statistic.rest  vehicle-data.service
resources/: Vehicles.csv  log4rs.yml  payload.json
src/: lib.rs
src/model/: AxumAPIModel.rs  Intervals.rs  Quantiles.rs  mod.rs
src/services/: AnalysisService.rs  ChartServices.rs  EnumService.rs  EstimatedPriceService.rs  PivotService.rs  PriceCalculator.rs  PriceCalculatorService.rs  PriceService.rs  PriceStatistic.rs  Statistic.rs  Utils.rs  VehicleService.rs  mod.rs
tests/: ChartService_test.rs  Quntiles_test.rs  interval_test.rs
