[package]
name = "data-statistics"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

[build]
target-dir = "/Users/matkat/Software/release/Rust/bin"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
log = { version = "0.4.21", features = [
    "max_level_info",
    "release_max_level_info",
] }
log4rs = "1.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
csv = "1.3.0"
chrono = "0.4.35"
async-trait = "0.1.78"
clap = { version = "4.5.3", features = ["derive"] }
prost = "0.12.3"
rdkafka = "0.36.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
polars = { version = "0.38.3", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "ndarray",
    "dtype-datetime",
    "is_in",
    "strings",
    "regex",
] }

[build-dependencies]
prost-build = "0.12.3"

[[bin]]
name = "statistics"
path = "src/bin/stat_engine.rs"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
rpath = false
