[package]
name = "data-statistics"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

[build]
target-dir = "/Users/matkat/Software/release/Rust/bin"

[dependencies]
axum = { version = "0.7.5", features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",

] }

axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-util = "0.2.2"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
regex = "1.10.4"
log = { version = "0.4.21", features = [
    "max_level_info",
    "release_max_level_info",
] }
log4rs = "1.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
csv = "1.3.0"
chrono = "0.4.38"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "0.41", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "ndarray",
    "dtype-datetime",
    "dtype-categorical",
    "dtype-decimal",
    "is_in",
    "strings",
    "csv",
    "ipc",
    "regex",

] }
axum-prometheus = "0.7.0"


[build-dependencies]
prost-build = "0.13.1"


[[bin]]
name = "vehicle-data"
path = "src/bin/http_app.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
rpath = false
