[package]
name = "data-statistics"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

[build]
target-dir = "/Users/matkat/Software/release/Rust/bin"

[dependencies]
axum = { version = "0.7", features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",

] }

axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-util = "0.2"
tokio = { version = "1.39", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
regex = "1.10"
log = { version = "0.4", features = [
    "max_level_info",
    "release_max_level_info",
] }
log4rs = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "0.42", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "ndarray",
    "dtype-datetime",
    "dtype-categorical",
    "dtype-decimal",
    "is_in",
    "strings",
    "csv",
    "ipc",
    "regex",

] }
axum-prometheus = "0.7"


[build-dependencies]
prost-build = "0.13"


[[bin]]
name = "vehicle-data"
path = "src/bin/http_app.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
debug = false
rpath = false
strip = true
